tests/ui/ast_head_aggregate.stderr
error[E0506]: cannot assign to `guard` because it is borrowed
  --> $DIR/ast_head_aggregate.rs:9:5
   |
8  |     let hagg = ast::HeadAggregate::new(ast::AggregateFunction::Count, &elements, &guard, &guard);
   |                                                                                  ------ borrow of `guard` occurs here
9  |     guard =  ast::AggregateGuard::gt(term);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ assignment to borrowed `guard` occurs here
10 |     drop(elements);
11 |     let _end = (guard, hagg);
   |                        ---- borrow later used here

error[E0505]: cannot move out of `elements` because it is borrowed
  --> $DIR/ast_head_aggregate.rs:10:10
   |
8  |     let hagg = ast::HeadAggregate::new(ast::AggregateFunction::Count, &elements, &guard, &guard);
   |                                                                       --------- borrow of `elements` occurs here
9  |     guard =  ast::AggregateGuard::gt(term);
10 |     drop(elements);
   |          ^^^^^^^^ move out of `elements` occurs here
11 |     let _end = (guard, hagg);
   |                        ---- borrow later used here

Some errors have detailed explanations: E0505, E0506.
For more information about an error, try `rustc --explain E0505`.
